--- a/CP18_HEW.vcxproj
+++ b/CP18_HEW.vcxproj
@@ -18,6 +18,94 @@
       <Platform>x64</Platform>
     </ProjectConfiguration>
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="src\animation.h" />
+    <ClInclude Include="src\application.h" />
+    <ClInclude Include="src\attack.h" />
+    <ClInclude Include="src\audio.h" />
+    <ClInclude Include="src\color.h" />
+    <ClInclude Include="src\conioex.h" />
+    <ClInclude Include="src\cube.h" />
+    <ClInclude Include="src\cube_top.h" />
+    <ClInclude Include="src\debug.h" />
+    <ClInclude Include="src\draw.h" />
+    <ClInclude Include="src\global.h" />
+    <ClInclude Include="src\halwindow.h" />
+    <ClInclude Include="src\input.h" />
+    <ClInclude Include="src\inputkey.h" />
+    <ClInclude Include="src\iso_cube.h" />
+    <ClInclude Include="src\iso_map.h" />
+    <ClInclude Include="src\item.h" />
+    <ClInclude Include="src\pixel.h" />
+    <ClInclude Include="src\player.h" />
+    <ClInclude Include="src\player_move.h" />
+    <ClInclude Include="src\player_sprite.h" />
+    <ClInclude Include="src\scene.h" />
+    <ClInclude Include="src\scene_ending.h" />
+    <ClInclude Include="src\scene_game.h" />
+    <ClInclude Include="src\scene_racing.h" />
+    <ClInclude Include="src\scene_test_dungeon.h" />
+    <ClInclude Include="src\scene_test_fluid.h" />
+    <ClInclude Include="src\scene_test_iso.h" />
+    <ClInclude Include="src\scene_test_sprite.h" />
+    <ClInclude Include="src\scene_tilemap.h" />
+    <ClInclude Include="src\scene_title.h" />
+    <ClInclude Include="src\shadow.h" />
+    <ClInclude Include="src\sprite.h" />
+    <ClInclude Include="src\stage.h" />
+    <ClInclude Include="src\stage_config.h" />
+    <ClInclude Include="src\texture.h" />
+    <ClInclude Include="src\timer.h" />
+    <ClInclude Include="src\vec.h" />
+    <ClInclude Include="src\world.h" />
+    <ClInclude Include="src\world_view.h" />
+    <ClInclude Include="src\world_view_iso.h" />
+    <ClInclude Include="src\world_view_raycast.h" />
+    <ClInclude Include="src\world_view_top.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="src\application.cpp" />
+    <ClCompile Include="src\attack.cpp" />
+    <ClCompile Include="src\audio.cpp" />
+    <ClCompile Include="src\color.cpp" />
+    <ClCompile Include="src\cube.cpp" />
+    <ClCompile Include="src\cube_top.cpp" />
+    <ClCompile Include="src\debug.cpp" />
+    <ClCompile Include="src\draw.cpp" />
+    <ClCompile Include="src\input.cpp" />
+    <ClCompile Include="src\inputkey.cpp" />
+    <ClCompile Include="src\isomap.cpp" />
+    <ClCompile Include="src\iso_cube.cpp" />
+    <ClCompile Include="src\iso_map.cpp" />
+    <ClCompile Include="src\item.cpp" />
+    <ClCompile Include="src\main.cpp" />
+    <ClCompile Include="src\pixel.cpp" />
+    <ClCompile Include="src\player.cpp" />
+    <ClCompile Include="src\player_move.cpp" />
+    <ClCompile Include="src\player_sprite.cpp" />
+    <ClCompile Include="src\scene.cpp" />
+    <ClCompile Include="src\scene_ending.cpp" />
+    <ClCompile Include="src\scene_game.cpp" />
+    <ClCompile Include="src\scene_racing.cpp" />
+    <ClCompile Include="src\scene_test_dungeon.cpp" />
+    <ClCompile Include="src\scene_test_fluid.cpp" />
+    <ClCompile Include="src\scene_test_iso.cpp" />
+    <ClCompile Include="src\scene_test_sprite.cpp" />
+    <ClCompile Include="src\scene_tilemap.cpp" />
+    <ClCompile Include="src\scene_title.cpp" />
+    <ClCompile Include="src\sprite.cpp" />
+    <ClCompile Include="src\stage.cpp" />
+    <ClCompile Include="src\stage_config.cpp" />
+    <ClCompile Include="src\textuer.cpp" />
+    <ClCompile Include="src\texture.cpp" />
+    <ClCompile Include="src\timer.cpp" />
+    <ClCompile Include="src\vec.cpp" />
+    <ClCompile Include="src\world.cpp" />
+    <ClCompile Include="src\world_view.cpp" />
+    <ClCompile Include="src\world_view_iso.cpp" />
+    <ClCompile Include="src\world_view_raycast.cpp" />
+    <ClCompile Include="src\world_view_top.cpp" />
+  </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>17.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
@@ -126,94 +214,6 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
     </Link>
   </ItemDefinitionGroup>
-  <ItemGroup>
-    <ClCompile Include="application.cpp" />
-    <ClCompile Include="attack.cpp" />
-    <ClCompile Include="audio.cpp" />
-    <ClCompile Include="color.cpp" />
-    <ClCompile Include="cube.cpp" />
-    <ClCompile Include="cube_top.cpp" />
-    <ClCompile Include="debug.cpp" />
-    <ClCompile Include="draw.cpp" />
-    <ClCompile Include="input.cpp" />
-    <ClCompile Include="inputkey.cpp" />
-    <ClCompile Include="isomap.cpp" />
-    <ClCompile Include="iso_cube.cpp" />
-    <ClCompile Include="iso_map.cpp" />
-    <ClCompile Include="item.cpp" />
-    <ClCompile Include="main.cpp" />
-    <ClCompile Include="pixel.cpp" />
-    <ClCompile Include="player.cpp" />
-    <ClCompile Include="player_move.cpp" />
-    <ClCompile Include="player_sprite.cpp" />
-    <ClCompile Include="scene.cpp" />
-    <ClCompile Include="scene_ending.cpp" />
-    <ClCompile Include="scene_game.cpp" />
-    <ClCompile Include="scene_racing.cpp" />
-    <ClCompile Include="scene_test_dungeon.cpp" />
-    <ClCompile Include="scene_test_fluid.cpp" />
-    <ClCompile Include="scene_test_iso.cpp" />
-    <ClCompile Include="scene_test_sprite.cpp" />
-    <ClCompile Include="scene_tilemap.cpp" />
-    <ClCompile Include="scene_title.cpp" />
-    <ClCompile Include="sprite.cpp" />
-    <ClCompile Include="stage.cpp" />
-    <ClCompile Include="stage_config.cpp" />
-    <ClCompile Include="textuer.cpp" />
-    <ClCompile Include="texture.cpp" />
-    <ClCompile Include="timer.cpp" />
-    <ClCompile Include="vec.cpp" />
-    <ClCompile Include="world.cpp" />
-    <ClCompile Include="world_view.cpp" />
-    <ClCompile Include="world_view_iso.cpp" />
-    <ClCompile Include="world_view_raycast.cpp" />
-    <ClCompile Include="world_view_top.cpp" />
-  </ItemGroup>
-  <ItemGroup>
-    <ClInclude Include="animation.h" />
-    <ClInclude Include="application.h" />
-    <ClInclude Include="attack.h" />
-    <ClInclude Include="audio.h" />
-    <ClInclude Include="color.h" />
-    <ClInclude Include="conioex.h" />
-    <ClInclude Include="cube.h" />
-    <ClInclude Include="cube_top.h" />
-    <ClInclude Include="debug.h" />
-    <ClInclude Include="draw.h" />
-    <ClInclude Include="global.h" />
-    <ClInclude Include="halwindow.h" />
-    <ClInclude Include="input.h" />
-    <ClInclude Include="inputkey.h" />
-    <ClInclude Include="iso_cube.h" />
-    <ClInclude Include="iso_map.h" />
-    <ClInclude Include="item.h" />
-    <ClInclude Include="pixel.h" />
-    <ClInclude Include="player.h" />
-    <ClInclude Include="player_move.h" />
-    <ClInclude Include="player_sprite.h" />
-    <ClInclude Include="scene.h" />
-    <ClInclude Include="scene_ending.h" />
-    <ClInclude Include="scene_game.h" />
-    <ClInclude Include="scene_racing.h" />
-    <ClInclude Include="scene_test_dungeon.h" />
-    <ClInclude Include="scene_test_fluid.h" />
-    <ClInclude Include="scene_test_iso.h" />
-    <ClInclude Include="scene_test_sprite.h" />
-    <ClInclude Include="scene_tilemap.h" />
-    <ClInclude Include="scene_title.h" />
-    <ClInclude Include="shadow.h" />
-    <ClInclude Include="sprite.h" />
-    <ClInclude Include="stage.h" />
-    <ClInclude Include="stage_config.h" />
-    <ClInclude Include="texture.h" />
-    <ClInclude Include="timer.h" />
-    <ClInclude Include="vec.h" />
-    <ClInclude Include="world.h" />
-    <ClInclude Include="world_view.h" />
-    <ClInclude Include="world_view_iso.h" />
-    <ClInclude Include="world_view_raycast.h" />
-    <ClInclude Include="world_view_top.h" />
-  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
