--- a/CP18_HEW.vcxproj.filters
+++ b/CP18_HEW.vcxproj.filters
@@ -99,6 +99,9 @@
     <ClInclude Include="src\world_view_top.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="src\platform.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\application.cpp">
@@ -177,6 +180,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="src\world_view_top.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="src\platform.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
